[gd_scene load_steps=21 format=3 uid="uid://bvj8jv8xjy7ps"]

[ext_resource type="Script" uid="uid://cq48dxeabn5gs" path="res://Scripts/character_movement.gd" id="1_uu6xs"]
[ext_resource type="Script" uid="uid://dvrsrr1i7byml" path="res://Scripts/Player/camera_3d.gd" id="2_r0du0"]
[ext_resource type="Script" uid="uid://dm7atgmn4nyu2" path="res://addons/zylann.hterrain/hterrain.gd" id="3_fos0i"]
[ext_resource type="Resource" uid="uid://ckvx7kmy1o621" path="res://TerrainData/data.hterrain" id="4_3dxm6"]
[ext_resource type="Script" uid="uid://ceb22ea8d8f0p" path="res://addons/zylann.hterrain/hterrain_texture_set.gd" id="5_lgr22"]
[ext_resource type="Texture2D" uid="uid://bok63sp5licm0" path="res://Textures/Extracted/Grass.png" id="6_lgr22"]
[ext_resource type="Script" uid="uid://n3bfaopbo7lo" path="res://addons/zylann.hterrain/hterrain_detail_layer.gd" id="7_trn2v"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_uu6xs"]

[sub_resource type="CapsuleMesh" id="CapsuleMesh_uu6xs"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_r0du0"]
albedo_color = Color(0.6772466, 0.00018799871, 0.6265677, 1)

[sub_resource type="SphereMesh" id="SphereMesh_cm0pq"]
material = SubResource("StandardMaterial3D_r0du0")
radius = 0.1
height = 0.2

[sub_resource type="BoxShape3D" id="BoxShape3D_r0du0"]

[sub_resource type="BoxMesh" id="BoxMesh_cm0pq"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_fos0i"]
albedo_color = Color(1, 0, 0, 1)

[sub_resource type="Resource" id="Resource_trn2v"]
resource_name = "Ground"
script = ExtResource("5_lgr22")
mode = 0
textures = [[ExtResource("6_lgr22")], [null]]

[sub_resource type="Image" id="Image_lgr22"]
data = {
"data": PackedByteArray(255, 0, 255, 255, 0, 0, 0, 255, 255, 0, 255, 255, 0, 0, 0, 255, 0, 0, 0, 255, 255, 0, 255, 255, 0, 0, 0, 255, 255, 0, 255, 255, 255, 0, 255, 255, 0, 0, 0, 255, 255, 0, 255, 255, 0, 0, 0, 255, 0, 0, 0, 255, 255, 0, 255, 255, 0, 0, 0, 255, 255, 0, 255, 255),
"format": "RGBA8",
"height": 4,
"mipmaps": false,
"width": 4
}

[sub_resource type="Image" id="Image_trn2v"]
data = {
"data": PackedByteArray(0, 0, 0, 255, 255, 0, 255, 255, 0, 0, 0, 255, 255, 0, 255, 255, 255, 0, 255, 255, 0, 0, 0, 255, 255, 0, 255, 255, 0, 0, 0, 255, 0, 0, 0, 255, 255, 0, 255, 255, 0, 0, 0, 255, 255, 0, 255, 255, 255, 0, 255, 255, 0, 0, 0, 255, 255, 0, 255, 255, 0, 0, 0, 255),
"format": "RGBA8",
"height": 4,
"mipmaps": false,
"width": 4
}

[sub_resource type="Image" id="Image_03owx"]
data = {
"data": PackedByteArray(255, 0, 255, 255, 0, 0, 0, 255, 255, 0, 255, 255, 0, 0, 0, 255, 0, 0, 0, 255, 255, 0, 255, 255, 0, 0, 0, 255, 255, 0, 255, 255, 255, 0, 255, 255, 0, 0, 0, 255, 255, 0, 255, 255, 0, 0, 0, 255, 0, 0, 0, 255, 255, 0, 255, 255, 0, 0, 0, 255, 255, 0, 255, 255),
"format": "RGBA8",
"height": 4,
"mipmaps": false,
"width": 4
}

[sub_resource type="Image" id="Image_wkp8b"]
data = {
"data": PackedByteArray(0, 0, 0, 255, 255, 0, 255, 255, 0, 0, 0, 255, 255, 0, 255, 255, 255, 0, 255, 255, 0, 0, 0, 255, 255, 0, 255, 255, 0, 0, 0, 255, 0, 0, 0, 255, 255, 0, 255, 255, 0, 0, 0, 255, 255, 0, 255, 255, 255, 0, 255, 255, 0, 0, 0, 255, 255, 0, 255, 255, 0, 0, 0, 255),
"format": "RGBA8",
"height": 4,
"mipmaps": false,
"width": 4
}

[sub_resource type="ImageTexture3D" id="ImageTexture3D_c6i3y"]
_images = Array[Image]([SubResource("Image_lgr22"), SubResource("Image_trn2v"), SubResource("Image_03owx"), SubResource("Image_wkp8b")])

[node name="Node3D" type="Node3D"]

[node name="MainPlayer" type="CharacterBody3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.2649469, 0)
disable_mode = 2
script = ExtResource("1_uu6xs")

[node name="CollisionShape3D" type="CollisionShape3D" parent="MainPlayer"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.4871535, 0)
shape = SubResource("CapsuleShape3D_uu6xs")
debug_color = Color(3.706068e-06, 0.62085986, 0.5616422, 0.41960785)

[node name="MeshInstance3D" type="MeshInstance3D" parent="MainPlayer/CollisionShape3D"]
mesh = SubResource("CapsuleMesh_uu6xs")

[node name="CameraPivot" type="Node3D" parent="MainPlayer"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 4, 0)

[node name="SpringArm3D" type="SpringArm3D" parent="MainPlayer/CameraPivot"]
spring_length = 5.0

[node name="Camera3D" type="Camera3D" parent="MainPlayer/CameraPivot/SpringArm3D"]
script = ExtResource("2_r0du0")

[node name="PlayerRay" type="RayCast3D" parent="MainPlayer/CameraPivot/SpringArm3D/Camera3D"]
target_position = Vector3(0, 0, -50)
collide_with_areas = true

[node name="DebugBall" type="MeshInstance3D" parent="MainPlayer/CameraPivot/SpringArm3D/Camera3D/PlayerRay"]
mesh = SubResource("SphereMesh_cm0pq")

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="."]
transform = Transform3D(-0.9177185, 0.2922432, -0.2690474, -0.005625937, 0.6676767, 0.7444301, 0.3971914, 0.6846911, -0.61109525, 0, 6.8276563, 0)

[node name="RigidBody3D" type="RigidBody3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -4.3310404, 1.4486041, 5.1100936)

[node name="CollisionShape3D" type="CollisionShape3D" parent="RigidBody3D"]
shape = SubResource("BoxShape3D_r0du0")

[node name="MeshInstance3D" type="MeshInstance3D" parent="RigidBody3D/CollisionShape3D"]
mesh = SubResource("BoxMesh_cm0pq")
surface_material_override/0 = SubResource("StandardMaterial3D_fos0i")

[node name="HTerrain" type="Node3D" parent="."]
script = ExtResource("3_fos0i")
centered = true
_terrain_data = ExtResource("4_3dxm6")
chunk_size = 32
collision_enabled = true
collision_layer = 1
collision_mask = 1
shader_type = "Classic4Lite"
custom_shader = null
custom_globalmap_shader = null
texture_set = SubResource("Resource_trn2v")
render_layers = 1
cast_shadow = 1
shader_params/u_ground_uv_scale = 20
shader_params/u_depth_blending = true
shader_params/u_triplanar = null
shader_params/u_tile_reduction = null
metadata/_custom_type_script = "uid://dm7atgmn4nyu2"

[node name="HTerrainDetailLayer" type="Node3D" parent="HTerrain"]
script = ExtResource("7_trn2v")
texture = SubResource("ImageTexture3D_c6i3y")
shader_params/u_globalmap_tint_bottom = null
shader_params/u_globalmap_tint_top = null
shader_params/u_bottom_ao = null
shader_params/u_instance_scale = null
shader_params/u_roughness = null
metadata/_custom_type_script = "uid://n3bfaopbo7lo"
